cmake_minimum_required(VERSION 3.4.3)

microsoft_add_library(DeferMeasurementPass Logging)
microsoft_add_library_tests(DeferMeasurementPass  Rules TransformationRulesPass AllocationManager Commandline AdaptorFactory Validator ValidationPass  Logging GroupingPass FunctionReplacementPass)

microsoft_add_library(DivisionByZeroPass Logging)
microsoft_add_library(GroupingPass Logging)
microsoft_add_library_tests(DivisionByZeroPass Rules TransformationRulesPass AllocationManager Commandline AdaptorFactory Validator ValidationPass StaticResourceComponent Logging GroupingPass FunctionReplacementPass) 

microsoft_add_library(TransformationRulesPass)
target_link_libraries(TransformationRulesPass PRIVATE Rules Commandline AllocationManager)
microsoft_add_library_tests(TransformationRulesPass Rules TransformationRulesPass AllocationManager Commandline AdaptorFactory Validator ValidationPass StaticResourceComponent Logging GroupingPass FunctionReplacementPass) 

microsoft_add_library(ValidationPass Logging)

microsoft_add_library(ZExtTransformPass Logging)
microsoft_add_library_tests(ZExtTransformPass Rules TransformationRulesPass AllocationManager Commandline AdaptorFactory Validator ValidationPass StaticResourceComponent Logging GroupingPass FunctionReplacementPass) 



microsoft_add_library(PreTransformTrimming Logging)

microsoft_add_library(PostTransformValidation Logging)
microsoft_add_library(StaticResourceComponent Logging)
microsoft_add_library_tests(StaticResourceComponent  Rules TransformationRulesPass AllocationManager Commandline AdaptorFactory Validator ValidationPass  Logging GroupingPass FunctionReplacementPass)

