cmake_minimum_required(VERSION 3.4.3)

microsoft_add_library(DeferMeasurementPass Logging)
microsoft_add_library_tests(DeferMeasurementPass  Rules TargetQisMappingPass AllocationManager Commandline AdaptorFactory Validator ValidationPass  Logging GroupingPass FunctionReplacementPass)

microsoft_add_library(DivisionByZeroPass Logging)
microsoft_add_library_tests(DivisionByZeroPass Rules TargetQisMappingPass AllocationManager Commandline AdaptorFactory Validator ValidationPass StaticResourceComponent Logging GroupingPass FunctionReplacementPass) 

microsoft_add_library(GroupingPass Logging)
microsoft_add_library_tests(GroupingPass Rules TargetQisMappingPass AllocationManager Commandline AdaptorFactory Validator ValidationPass StaticResourceComponent Logging GroupingPass FunctionReplacementPass)

microsoft_add_library(TargetQisMappingPass)
target_link_libraries(TargetQisMappingPass PRIVATE Rules Commandline AllocationManager)
microsoft_add_library_tests(TargetQisMappingPass Rules TargetQisMappingPass AllocationManager Commandline AdaptorFactory Validator ValidationPass StaticResourceComponent Logging GroupingPass FunctionReplacementPass) 

microsoft_add_library(ValidationPass Logging)

microsoft_add_library(ZExtTransformPass Logging)
microsoft_add_library_tests(ZExtTransformPass Rules TargetQisMappingPass AllocationManager Commandline AdaptorFactory Validator ValidationPass StaticResourceComponent Logging GroupingPass FunctionReplacementPass) 

microsoft_add_library(FunctionReplacementPass Logging)

microsoft_add_library(RemoveNonEntrypointFunctions Logging)

microsoft_add_library(PostTransformValidation Logging)
microsoft_add_library(StaticResourceComponent Logging)
microsoft_add_library_tests(StaticResourceComponent  Rules TargetQisMappingPass AllocationManager Commandline AdaptorFactory Validator ValidationPass  Logging GroupingPass FunctionReplacementPass)